Rendering a second website inside the main page.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chaoxin Yang</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -18,10 +19,10 @@
         <h1 class="white startingScreenName">Chaoxin Yang</h1>
         <p class="white">Developer</p>
         <!-- <img style="left: 27rem; bottom: 4rem" class="cloudImages" src="images/cloud-image.png" alt="cloud-image"> -->
-        <a href="intro.html">Bio</a>
+        <button onclick="changeDivBoxContent('intro.html')">Bio</button>
         <a href="projects.html">Projects</a>
-
     </div>
+   <iframe id="locationToChange" src=""></iframe>
 
     <!-- Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -33,6 +34,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+        <!-- Javascript -->
+        <script src="app.js"></script>
 </body>
 
 </html>
